# PraktikumVGJS

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Game.h  Lock-free_queue_test.cpp  Lock-free_queue_test.h  PraktikumVGJS.sln  PraktikumVGJS.vcxproj  PraktikumVGJS.vcxproj.filters  README.md  VECoro.h  VECoroLockless.h  VEGameJobSystem.h  VEGameJobSystemLockfree.h  VEGameJobSystemLockless.h  coro.cpp  func.cpp  include.h  lockfreeQueueTest.cpp  lockfreeQueueTest.h  main.cpp  mainGBENCH.cpp  mandelbrotCoro.cpp  mandelbrotCoro.h  mandelbrotFunc.cpp  mandelbrotFunc.h  mctsCoro.cpp  mctsCoro.h  mctsFunc.cpp  mctsFunc.h  mctsGame.h  mctsStructs.h  script.sh  vgjs.h  workCoro.cpp  workCoro.h  workFunc.cpp  workFunc.h
PraktikumVGJS/: VECoro.h  VECoroLockfree.h  VEGameJobSystem.h  VEGameJobSystemLockfree.h  VGJSCoroLockfree.h  VGJSHeaders.h  VGJSLockfree.h  lockfreeQueue.cpp  lockfreeQueueTest.cpp  main.cpp  mandelbrot.cpp  mandelbrotCoro.cpp  mandelbrotCoro.h  mandelbrotFunc.cpp  mandelbrotFunc.h  mcts.cpp  mctsCoro.cpp  mctsFunc.cpp  mctsGame.h  mctsStructs.h  performance.cpp  test.cpp  tests.h  threadpool.cpp  threadpool.hpp  vgjs.h  work.cpp  workCoro.cpp  workCoro.h  workFunc.cpp  workFunc.h
PraktikumVGJS/SpeedupTest/: bench16.cfg  bench4.cfg
PraktikumVGJS/results/: bench.cfg  bench16.cfg  bench4.cfg  mandelbrotFunc16.txt  workCoro1.txt  workCoro16.txt  workCoro2.txt  workCoro4.txt  workFunc1.txt  workFunc16.txt  workFunc2.txt  workFunc4.txt
PraktikumVGJSTest/: PraktikumVGJSTest.vcxproj
results/: workCoro4.txt  workFunc4.txt
results/r/: lockedCoroEfficiency.R  lockedCoroSpeedup.R  lockedFuncEfficiency.R  lockedFuncSpeedup.R  lockedMCTSCoroSpeedup.R  lockedMCTSFuncSpeedup.R  lockedVoidEfficiency.R  lockedVoidSpeedup.R  lockfreeCoroEfficiency.R  (+13 more)
(+495 files in other folders)
